Use grid classes to fix alignment

--- a/source/stylesheets/global.css.scss
+++ b/source/stylesheets/global.css.scss
@@ -32,7 +32,8 @@
 
 .footer-menu {
   color: #eee;
-  padding: 1.2rem 0;
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
   background-color: $background-dark-2;
 }
 
